Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>Welcome to Flappy Pipe - Control the Pipe's support page. For support please email <a href="mailto:flappypipe@gmail.com">flappypipe@gmail.com</a></p>
+        <p>Welcome to Flappy Pipe - Control the Pipe's support page. For support please email <a href="mailto:tylerriceapps@gmail.com">tylerriceapps@gmail.com</a></p>
       </section>
     </div>
 
